# Fox-Fighters

./: .gitignore  CMakeLists.txt  README.md
Bullet Hell Game/: CMakeLists.txt  main.cpp
Bullet Hell Game/assets/data/: textures.json
Bullet Hell Game/include/: asset_manager.h  background.h  bullet.h  bullet_game.h  bullet_spawner.h  constants.h  enemy.h  enemy_spawner.h  event_timer.h  game_object.h  player.h  spawner.h  ui_constants.h
Bullet Hell Game/src/: asset_manager.cpp  background.cpp  bullet.cpp  bullet_spawner.cpp  enemy.cpp  enemy_spawner.cpp  event_timer.cpp  player.cpp
